@@ -38,7 +38,6 @@
  * Version 2 license, then the option applies only if the new code is
  * made subject to such option by the copyright holder.
  */
-
 package org.netbeans.modules.cnd.makeproject.ui;
 
 import java.awt.Toolkit;
@@ -143,7 +142,6 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
     static final String PRIMARY_TYPE = "application"; // NOI18N
     static final String SUBTYPE = "x-org-netbeans-modules-cnd-makeproject-uidnd"; // NOI18N
     static final String MASK = "mask"; // NOI18N
-
     static StandardNodeAction renameAction = null;
     static StandardNodeAction deleteAction = null;
 
@@ -166,16 +164,16 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             }
         }
     }
-
     private boolean findPathMode = false;
+
     private boolean isFindPathMode() {
         return findPathMode;
     }
 
-    public org.openide.nodes.Node findPath( Node root, Object target ) {
+    public org.openide.nodes.Node findPath(Node root, Object target) {
         Node returnNode = null;
-        Project rootProject = (Project)root.getLookup().lookup( Project.class );
-        if (rootProject == null ) {
+        Project rootProject = (Project) root.getLookup().lookup(Project.class);
+        if (rootProject == null) {
             return null;
         }
 
@@ -183,11 +181,12 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             target = ((DataObject) target).getPrimaryFile();
         }
 
-        if (!(target instanceof FileObject))
+        if (!(target instanceof FileObject)) {
             return null;
+        }
 
         // FIXUP: this doesn't work with file groups (jl: is this still true?)
-        File file = FileUtil.toFile((FileObject)target);
+        File file = FileUtil.toFile((FileObject) target);
         if (!gotMakeConfigurationDescriptor() || file == null) {
             // IZ 111884 NPE while creating a web project
             return null;
@@ -213,19 +212,21 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             // Find the node and return it
             Node folderNode = findFolderNode(root, item.getFolder());
             if (folderNode != null) {
-                Node[] nodes = folderNode.getChildren().getNodes( true );
+                Node[] nodes = folderNode.getChildren().getNodes(true);
                 int index = 0;
                 for (index = 0; index < nodes.length; index++) {
-                    Item nodeItem = (Item)nodes[index].getValue("Item"); // NOI18N
-                    if (nodeItem == item)
+                    Item nodeItem = (Item) nodes[index].getValue("Item"); // NOI18N
+                    if (nodeItem == item) {
                         break;
+                    }
                 }
-                if (nodes.length > 0 && index < nodes.length)
+                if (nodes.length > 0 && index < nodes.length) {
                     returnNode = nodes[index];
-                /*
-                if (nodes.length > 0)
-                    returnNode = nodes[nodes.length -1];
-                 */
+                }
+            /*
+            if (nodes.length > 0)
+            returnNode = nodes[nodes.length -1];
+             */
             }
         } finally {
             findPathMode = false;
@@ -239,21 +240,27 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
      */
     private static Node findFolderNode(Node root, Folder folder) {
         if (root.getValue("Folder") == folder) // NOI18N
+        {
             return root;
+        }
         Folder parent = folder.getParent();
 
-        if (parent == null)
+        if (parent == null) {
             return root;
+        }
 
         Node parentNode = findFolderNode(root, parent);
 
-        if (parentNode == null)
+        if (parentNode == null) {
             return null;
+        }
 
-        Node[] nodes = parentNode.getChildren().getNodes( true );
-        for ( int i = 0; i < nodes.length; i++)  {
+        Node[] nodes = parentNode.getChildren().getNodes(true);
+        for (int i = 0; i < nodes.length; i++) {
             if (nodes[i].getValue("Folder") == folder) // NOI18N
+            {
                 return nodes[i];
+            }
         }
         return null;
     }
@@ -266,9 +273,11 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         Node parentNode = findFolderNode(root, item.getFolder());
         if (parentNode != null) {
             Node[] nodes = parentNode.getChildren().getNodes(true);
-            for ( int i = 0; i < nodes.length; i++)  {
+            for (int i = 0; i < nodes.length; i++) {
                 if (nodes[i].getValue("Item") == item) // NOI18N
+                {
                     return nodes[i];
+                }
             }
         }
         return null;
@@ -282,12 +291,13 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         Node rootNode = ProjectTabBridge.getInstance().getExplorerManager().getRootContext();
         Node projectRoot = findProjectNode(rootNode, project);
 
-        if (projectRoot == null)
-            return ;
+        if (projectRoot == null) {
+            return;
+        }
 
         Node folderNode = findFolderNode(projectRoot, folder);
         try {
-            ProjectTabBridge.getInstance().getExplorerManager().setSelectedNodes(new Node[] {folderNode});
+            ProjectTabBridge.getInstance().getExplorerManager().setSelectedNodes(new Node[]{folderNode});
         } catch (Exception e) {
             // skip
         }
@@ -298,7 +308,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
      * See IZ7551
      */
     public static void setVisible(Project project, Item item) {
-        setVisible(project, new Item[] {item});
+        setVisible(project, new Item[]{item});
     }
 
     public static void setVisible(Project project, Item[] items) {
@@ -307,8 +317,9 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         for (int i = 0; i < items.length; i++) {
             Node root = findProjectNode(rootNode, project);
 
-            if (root != null)
+            if (root != null) {
                 nodes.add(findItemNode(root, items[i]));
+            }
         }
         try {
             ProjectTabBridge.getInstance().getExplorerManager().setSelectedNodes((Node[]) nodes.toArray(new Node[0]));
@@ -319,6 +330,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
 
     public static void checkForChangedItems(final Project project, final Folder folder, final Item item) {
         SwingUtilities.invokeLater(new Runnable() {
+
             public void run() {
                 if (item == null) {
                     checkForChangedItems(project);
@@ -326,12 +338,12 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
                 }
                 Node rootNode = ProjectTabBridge.getInstance().getExplorerManager().getRootContext();
                 Node root = findProjectNode(rootNode, project);
-                if (root != null){
+                if (root != null) {
                     Node node = findItemNode(root, item);
-                    if (node instanceof FilterNode){
+                    if (node instanceof FilterNode) {
                         Object o = node.getLookup().lookup(ViewItemNode.class);
-                        if (o != null){
-                            ((ChangeListener)o).stateChanged(null);
+                        if (o != null) {
+                            ((ChangeListener) o).stateChanged(null);
                         }
                     }
                 }
@@ -345,13 +357,13 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
     }
 
     private static void checkForChangedItems(Node root) {
-        if (root != null){
-            for(Node node : root.getChildren().getNodes(true)){
+        if (root != null) {
+            for (Node node : root.getChildren().getNodes(true)) {
                 checkForChangedItems(node);
-                if (node instanceof FilterNode){
+                if (node instanceof FilterNode) {
                     Object o = node.getLookup().lookup(ViewItemNode.class);
-                    if (o != null){
-                        ((ChangeListener)o).stateChanged(null);
+                    if (o != null) {
+                        ((ChangeListener) o).stateChanged(null);
                     }
                 }
             }
@@ -360,6 +372,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
 
     public static void refreshBrokenItems(final Project project) {
         SwingUtilities.invokeLater(new Runnable() {
+
             public void run() {
                 refreshBrokenItemsImpl(project);
             }
@@ -376,7 +389,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             if (root.isLeaf()) {
                 Object o = root.getLookup().lookup(BrokenViewItemNode.class);
                 if (o != null) {
-                    ((BrokenViewItemNode)o).refresh();
+                    ((BrokenViewItemNode) o).refresh();
                 }
             } else {
                 for (Node node : root.getChildren().getNodes(true)) {
@@ -400,13 +413,11 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
     }
 
     // Private innerclasses ----------------------------------------------------
-
     public static boolean hasBrokenLinks() {
         return false;
     }
-
-    private static Image brokenProjectBadge = ImageUtilities.loadImage( "org/netbeans/modules/cnd/makeproject/ui/resources/brokenProjectBadge.gif" ); // NOI18N
-    private static Image brokenIncludeBadge = ImageUtilities.loadImage( "org/netbeans/modules/cnd/makeproject/ui/resources/brokenIncludeBadge.gif" ); // NOI18N
+    private static Image brokenProjectBadge = ImageUtilities.loadImage("org/netbeans/modules/cnd/makeproject/ui/resources/brokenProjectBadge.gif"); // NOI18N
+    private static Image brokenIncludeBadge = ImageUtilities.loadImage("org/netbeans/modules/cnd/makeproject/ui/resources/brokenIncludeBadge.gif"); // NOI18N
 
     private static Node getWaitNode() {
         return new LoadingNode();
@@ -437,14 +448,13 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         private final Lookup.Result<BrokenIncludes> brokenIncludesResult;
 
         public MakeLogicalViewRootNode(Folder folder) {
-            super(new LogicalViewChildren(folder), Lookups.fixed(new Object[] {
-                folder,
-                project,
-                new FolderSearchInfo(folder),
-            }));
+            super(new LogicalViewChildren(folder), Lookups.fixed(new Object[]{
+                        folder,
+                        project,
+                        new FolderSearchInfo(folder),}));
             this.folder = folder;
             setIconBaseWithExtension(MakeConfigurationDescriptor.ICON);
-            setName( ProjectUtils.getInformation( project ).getDisplayName() );
+            setName(ProjectUtils.getInformation(project).getDisplayName());
 
             brokenIncludesResult = Lookup.getDefault().lookup(new Lookup.Template<BrokenIncludes>(BrokenIncludes.class));
             brokenIncludesResult.addLookupListener(this);
@@ -482,7 +492,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             if (confs == null) {
                 return;
             }
-            for (Configuration conf : confs.getConfs()){
+            for (Configuration conf : confs.getConfs()) {
                 MakeConfiguration makeConfiguration = (MakeConfiguration) conf;
                 if (makeConfiguration.isMakefileConfiguration()) {
                     MakefileConfiguration makefileConfiguration = makeConfiguration.getMakefileConfiguration();
@@ -491,8 +501,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
                     if (file.exists()) {
                         try {
                             set.add(FileUtil.toFileObject(file.getCanonicalFile()));
-                        }
-                        catch (IOException ioe) {
+                        } catch (IOException ioe) {
                         }
                     }
                 }
@@ -503,13 +512,13 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             allFolders.addAll(folder.getAllFolders(true));
             Iterator iter = allFolders.iterator();
             while (iter.hasNext()) {
-                ((Folder)iter.next()).addChangeListener(this);
+                ((Folder) iter.next()).addChangeListener(this);
             }
         }
 
         @Override
         public String getShortDescription() {
-            if (brokenIncludes){
+            if (brokenIncludes) {
                 return NbBundle.getMessage(getClass(), "BrokenIncludeTxt");
             } else {
                 return super.getShortDescription();
@@ -529,23 +538,28 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
 
         @Override
         public Object getValue(String valstring) {
-            if (valstring == null)
-                return super.getValue(valstring);
+            if (valstring == null) {
+                return super.getValue(null);
+            }
             if (valstring.equals("Folder")) // NOI18N
+            {
                 return folder;
-            else if (valstring.equals("Project")) // NOI18N
+            } else if (valstring.equals("Project")) // NOI18N
+            {
                 return project;
-            else if (valstring.equals("This")) // NOI18N
+            } else if (valstring.equals("This")) // NOI18N
+            {
                 return this;
+            }
             return super.getValue(valstring);
         }
 
         @Override
-        public Image getIcon( int type ) {
+        public Image getIcon(int type) {
             return mergeBadge(annotateIcon(super.getIcon(type), type));
         }
 
-        private Image mergeBadge(Image original){
+        private Image mergeBadge(Image original) {
             if (brokenLinks) {
                 return ImageUtilities.mergeImages(original, brokenProjectBadge, 8, 0);
             } else if (brokenIncludes) {
@@ -555,12 +569,12 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         }
 
         @Override
-        public Image getOpenedIcon( int type ) {
+        public Image getOpenedIcon(int type) {
             return mergeBadge(annotateIcon(super.getOpenedIcon(type), type));
         }
 
         @Override
-        public Action[] getActions( boolean context ) {
+        public Action[] getActions(boolean context) {
             // TODO: not clear if we need to call the following method at all
             // but we need to remove remembering the output to prevent memory leak;
             // I think it could be removed
@@ -571,20 +585,21 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             List actions = new ArrayList();
             // Add standard actions
             Action[] standardActions = getAdditionalActions();
-            for (int i = 0; i < standardActions.length; i++)
+            for (int i = 0; i < standardActions.length; i++) {
                 actions.add(standardActions[i]);
+            }
             actions.add(null);
             //actions.add(new CodeAssistanceAction());
             actions.addAll(Utilities.actionsForPath("NativeProjects/Menu")); // NOI18N
             actions.add(null);
-            actions.add(SystemAction.get(org.openide.actions.FindAction.class ));
+            actions.add(SystemAction.get(org.openide.actions.FindAction.class));
             actions.addAll(Utilities.actionsForPath("Projects/Actions")); // NOI18N
             // Add remaining actions
             actions.add(null);
             //actions.add(SystemAction.get(ToolsAction.class));
             //actions.add(null);
             actions.add(CommonProjectActions.customizeProjectAction());
-            return (Action[])actions.toArray(new Action[actions.size()]);
+            return (Action[]) actions.toArray(new Action[actions.size()]);
         }
 
         @Override
@@ -596,8 +611,9 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         public PasteType getDropType(Transferable transferable, int action, int index) {
             DataFlavor[] flavors = transferable.getTransferDataFlavors();
             for (int i = 0; i < flavors.length; i++) {
-                if (flavors[i].getSubType().equals(SUBTYPE))
+                if (flavors[i].getSubType().equals(SUBTYPE)) {
                     return super.getDropType(transferable, action, index);
+                }
             }
             return null;
         }
@@ -608,7 +624,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             for (int i = 0; i < flavors.length; i++) {
                 if (flavors[i].getSubType().equals(SUBTYPE)) {
                     try {
-                        ViewItemNode viewItemNode = (ViewItemNode)transferable.getTransferData(flavors[i]);
+                        ViewItemNode viewItemNode = (ViewItemNode) transferable.getTransferData(flavors[i]);
                         int type = new Integer(flavors[i].getParameter(MASK)).intValue();
                         list.add(new ViewItemPasteType(this.getFolder(), viewItemNode, type));
                     } catch (Exception e) {
@@ -619,41 +635,39 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         }
 
         // Private methods -------------------------------------------------
-
         private Action[] getAdditionalActions() {
 
-            ResourceBundle bundle = NbBundle.getBundle( MakeLogicalViewProvider.class );
+            ResourceBundle bundle = NbBundle.getBundle(MakeLogicalViewProvider.class);
 
-            return new Action[] {
-                CommonProjectActions.newFileAction(),
-                null,
-                SystemAction.get(AddExistingItemAction.class),
-                SystemAction.get(AddExistingFolderItemsAction.class),
-                SystemAction.get(NewFolderAction.class),
-                new AddExternalItemAction(project),
-                null,
-                ProjectSensitiveActions.projectCommandAction(ActionProvider.COMMAND_BUILD, bundle.getString( "LBL_BuildAction_Name" ), null ), // NOI18N
-                ProjectSensitiveActions.projectCommandAction(ActionProvider.COMMAND_REBUILD, bundle.getString( "LBL_RebuildAction_Name" ), null ), // NOI18N
-                ProjectSensitiveActions.projectCommandAction(ActionProvider.COMMAND_CLEAN, bundle.getString( "LBL_CleanAction_Name" ), null ), // NOI18N
-                ProjectSensitiveActions.projectCommandAction(MakeActionProvider.COMMAND_BATCH_BUILD, bundle.getString("LBL_BatchBuildAction_Name"), null ), // NOI18N
-                ProjectSensitiveActions.projectCommandAction(MakeActionProvider.COMMAND_BUILD_PACKAGE, bundle.getString("LBL_BuildPackagesAction_Name"), null  ), // NOI18N
-                new SetConfigurationAction(project),
-                null,
-                ProjectSensitiveActions.projectCommandAction( ActionProvider.COMMAND_RUN, bundle.getString( "LBL_RunAction_Name" ), null ), // NOI18N
-                //new DebugMenuAction(project, helper),
-                ProjectSensitiveActions.projectCommandAction( ActionProvider.COMMAND_DEBUG, bundle.getString( "LBL_DebugAction_Name" ), null ),
-                ProjectSensitiveActions.projectCommandAction( ActionProvider.COMMAND_DEBUG_STEP_INTO, bundle.getString( "LBL_DebugAction_Step_Name" ), null ),
-                null,
-                CommonProjectActions.setAsMainProjectAction(),
-                CommonProjectActions.openSubprojectsAction(),
-                CommonProjectActions.closeProjectAction(),
-                null,
-                CommonProjectActions.renameProjectAction(),
-                CommonProjectActions.moveProjectAction(),
-                CommonProjectActions.copyProjectAction(),
-                CommonProjectActions.deleteProjectAction(),
-                null,
-            };
+            return new Action[]{
+                        CommonProjectActions.newFileAction(),
+                        null,
+                        SystemAction.get(AddExistingItemAction.class),
+                        SystemAction.get(AddExistingFolderItemsAction.class),
+                        SystemAction.get(NewFolderAction.class),
+                        new AddExternalItemAction(project),
+                        null,
+                        ProjectSensitiveActions.projectCommandAction(ActionProvider.COMMAND_BUILD, bundle.getString("LBL_BuildAction_Name"), null), // NOI18N
+                        ProjectSensitiveActions.projectCommandAction(ActionProvider.COMMAND_REBUILD, bundle.getString("LBL_RebuildAction_Name"), null), // NOI18N
+                        ProjectSensitiveActions.projectCommandAction(ActionProvider.COMMAND_CLEAN, bundle.getString("LBL_CleanAction_Name"), null), // NOI18N
+                        ProjectSensitiveActions.projectCommandAction(MakeActionProvider.COMMAND_BATCH_BUILD, bundle.getString("LBL_BatchBuildAction_Name"), null), // NOI18N
+                        ProjectSensitiveActions.projectCommandAction(MakeActionProvider.COMMAND_BUILD_PACKAGE, bundle.getString("LBL_BuildPackagesAction_Name"), null), // NOI18N
+                        new SetConfigurationAction(project),
+                        null,
+                        ProjectSensitiveActions.projectCommandAction(ActionProvider.COMMAND_RUN, bundle.getString("LBL_RunAction_Name"), null), // NOI18N
+                        //new DebugMenuAction(project, helper),
+                        ProjectSensitiveActions.projectCommandAction(ActionProvider.COMMAND_DEBUG, bundle.getString("LBL_DebugAction_Name"), null),
+                        ProjectSensitiveActions.projectCommandAction(ActionProvider.COMMAND_DEBUG_STEP_INTO, bundle.getString("LBL_DebugAction_Step_Name"), null),
+                        null,
+                        CommonProjectActions.setAsMainProjectAction(),
+                        CommonProjectActions.openSubprojectsAction(),
+                        CommonProjectActions.closeProjectAction(),
+                        null,
+                        CommonProjectActions.renameProjectAction(),
+                        CommonProjectActions.moveProjectAction(),
+                        CommonProjectActions.copyProjectAction(),
+                        CommonProjectActions.deleteProjectAction(),
+                        null,};
 
         }
 
@@ -673,33 +687,33 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             }
             return false;
         }
-
     }
 
     private final class MakeLogicalViewRootNodeBroken extends AbstractNode {
+
         public MakeLogicalViewRootNodeBroken() {
-            super(Children.LEAF, Lookups.fixed(new Object[] {project}));
+            super(Children.LEAF, Lookups.fixed(new Object[]{project}));
             setIconBaseWithExtension(MakeConfigurationDescriptor.ICON);
-            setName( ProjectUtils.getInformation( project ).getDisplayName() );
+            setName(ProjectUtils.getInformation(project).getDisplayName());
         }
 
         @Override
-        public Image getIcon( int type ) {
+        public Image getIcon(int type) {
             Image original = super.getIcon(type);
             return ImageUtilities.mergeImages(original, brokenProjectBadge, 8, 0);
         }
 
         @Override
-        public Image getOpenedIcon( int type ) {
+        public Image getOpenedIcon(int type) {
             Image original = super.getOpenedIcon(type);
             return ImageUtilities.mergeImages(original, brokenProjectBadge, 8, 0);
         }
 
         @Override
-        public Action[] getActions( boolean context ) {
+        public Action[] getActions(boolean context) {
             List actions = new ArrayList();
             actions.add(CommonProjectActions.closeProjectAction());
-            return (Action[])actions.toArray(new Action[actions.size()]);
+            return (Action[]) actions.toArray(new Action[actions.size()]);
         }
 
         @Override
@@ -709,6 +723,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
     }
 
     private class LogicalViewChildren extends BaseMakeViewChildren {
+
         public LogicalViewChildren(Folder folder) {
             super(folder);
         }
@@ -717,11 +732,11 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             Node node = null;
             if (key instanceof LoadingNode) {
                 //System.err.println("LogicalViewChildren: return wait node");
-                node = (Node)key;
+                node = (Node) key;
             } else if (key instanceof Node) {
-                node = (Node)key;
+                node = (Node) key;
             } else if (key instanceof Folder) {
-                Folder folder = (Folder)key;
+                Folder folder = (Folder) key;
                 if (folder.isProjectFiles()) {
                     //FileObject srcFileObject = project.getProjectDirectory().getFileObject("src");
                     FileObject srcFileObject = project.getProjectDirectory();
@@ -731,12 +746,12 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
                     } catch (DataObjectNotFoundException e) {
                         throw new AssertionError(e);
                     }
-                    node = new LogicalFolderNode(((DataFolder)srcDataObject).getNodeDelegate(), folder);
+                    node = new LogicalFolderNode(((DataFolder) srcDataObject).getNodeDelegate(), folder);
                 } else {
                     node = new ExternalFilesNode(folder);
                 }
             } else if (key instanceof Item) {
-                Item item = (Item)key;
+                Item item = (Item) key;
                 DataObject fileDO = item.getDataObject();
                 if (fileDO != null) {
                     node = new ViewItemNode(this, getFolder(), item, fileDO);
@@ -744,21 +759,30 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
                     node = new BrokenViewItemNode(this, getFolder(), item);
                 }
             } else if (key instanceof AbstractNode) {
-                node = (AbstractNode)key;
+                node = (AbstractNode) key;
             }
-            return new Node[] {node};
+            return new Node[]{node};
         }
 
         protected Collection getKeys() {
             Collection collection = getFolder().getElements();
-
+            switch (getFolder().getConfigurationDescriptor().getState()) {
+                case READING:
+                    if (collection.size() == 0) {
+                        collection = Collections.singletonList(new LoadingNode());
+                    }
+                    break;
+                case BROKEN:
+                // TODO show broken node
+            }
             if ("root".equals(getFolder().getName())) { // NOI18N
                 LogicalViewNodeProvider[] providers = LogicalViewNodeProviders.getInstance().getProvidersAsArray();
                 if (providers.length > 0) {
                     for (int i = 0; i < providers.length; i++) {
                         AbstractNode node = providers[i].getLogicalViewNode(project);
-                        if (node != null)
+                        if (node != null) {
                             collection.add(node);
+                        }
                     }
                 }
             }
@@ -768,25 +792,25 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
     }
 
     private MakeConfigurationDescriptor getMakeConfigurationDescriptor() {
-        ConfigurationDescriptorProvider pdp = project.getLookup().lookup(ConfigurationDescriptorProvider.class );
-        MakeConfigurationDescriptor makeConfigurationDescriptor = (MakeConfigurationDescriptor)pdp.getConfigurationDescriptor();
+        ConfigurationDescriptorProvider pdp = project.getLookup().lookup(ConfigurationDescriptorProvider.class);
+        MakeConfigurationDescriptor makeConfigurationDescriptor = (MakeConfigurationDescriptor) pdp.getConfigurationDescriptor();
         return makeConfigurationDescriptor;
     }
 
     private boolean gotMakeConfigurationDescriptor() {
-        ConfigurationDescriptorProvider pdp = project.getLookup().lookup(ConfigurationDescriptorProvider.class );
+        ConfigurationDescriptorProvider pdp = project.getLookup().lookup(ConfigurationDescriptorProvider.class);
         return pdp.gotDescriptor();
     }
-    
+
     private class LogicalFolderNode extends AnnotatedNode implements ChangeListener {
+
         private Folder folder;
 
         public LogicalFolderNode(Node folderNode, Folder folder) {
-            super(new LogicalViewChildren(folder), Lookups.fixed(new Object[] {
-                folder,
-                project,
-                new FolderSearchInfo(folder),
-            }));
+            super(new LogicalViewChildren(folder), Lookups.fixed(new Object[]{
+                        folder,
+                        project,
+                        new FolderSearchInfo(folder),}));
             this.folder = folder;
             setForceAnnotation(true);
             updateAnnotationFiles();
@@ -797,11 +821,13 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         }
 
         class UpdateAnnotationFilesTHread extends Thread {
+
             LogicalFolderNode logicalFolderNode;
 
             UpdateAnnotationFilesTHread(LogicalFolderNode logicalFolderNode) {
                 this.logicalFolderNode = logicalFolderNode;
             }
+
             @Override
             public void run() {
                 setFiles(Collections.EMPTY_SET /*folder.getAllItemsAsFileObjectSet(true)*/); // See IZ 100394 for details
@@ -810,7 +836,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
                 allFolders.addAll(folder.getAllFolders(true));
                 Iterator iter = allFolders.iterator();
                 while (iter.hasNext()) {
-                    ((Folder)iter.next()).addChangeListener(logicalFolderNode);
+                    ((Folder) iter.next()).addChangeListener(logicalFolderNode);
                 }
             }
         }
@@ -828,26 +854,32 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         public Folder getFolder() {
             return folder;
         }
+
         @Override
         public Object getValue(String valstring) {
-            if (valstring == null)
-                return super.getValue(valstring);
+            if (valstring == null) {
+                return super.getValue(null);
+            }
             if (valstring.equals("Folder")) // NOI18N
+            {
                 return folder;
-            else if (valstring.equals("Project")) // NOI18N
+            } else if (valstring.equals("Project")) // NOI18N
+            {
                 return project;
-            else if (valstring.equals("This")) // NOI18N
+            } else if (valstring.equals("This")) // NOI18N
+            {
                 return this;
+            }
             return super.getValue(valstring);
         }
 
         @Override
-        public Image getIcon( int type ) {
+        public Image getIcon(int type) {
             return annotateIcon(ImageUtilities.loadImage("org/netbeans/modules/cnd/makeproject/ui/resources/logicalFilesFolder.gif"), type); // NOI18N
         }
 
         @Override
-        public Image getOpenedIcon( int type ) {
+        public Image getOpenedIcon(int type) {
             return annotateIcon(ImageUtilities.loadImage("org/netbeans/modules/cnd/makeproject/ui/resources/logicalFilesFolderOpened.gif"), type); // NOI18N
         }
 
@@ -873,11 +905,10 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             fireDisplayNameChange(oldName, newName);
         }
 
-        @Override
-        public void setDisplayName(String newName) {
-            setDisplayName(newName);
-        }
-
+//        @Override
+//        public void setDisplayName(String newName) {
+//            setDisplayName(newName);
+//        }
         @Override
         public boolean canRename() {
             return true;
@@ -902,8 +933,9 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         public PasteType getDropType(Transferable transferable, int action, int index) {
             DataFlavor[] flavors = transferable.getTransferDataFlavors();
             for (int i = 0; i < flavors.length; i++) {
-                if (flavors[i].getSubType().equals(SUBTYPE))
+                if (flavors[i].getSubType().equals(SUBTYPE)) {
                     return super.getDropType(transferable, action, index);
+                }
             }
             return null;
         }
@@ -914,7 +946,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             for (int i = 0; i < flavors.length; i++) {
                 if (flavors[i].getSubType().equals(SUBTYPE)) {
                     try {
-                        ViewItemNode viewItemNode = (ViewItemNode)transferable.getTransferData(flavors[i]);
+                        ViewItemNode viewItemNode = (ViewItemNode) transferable.getTransferData(flavors[i]);
                         int type = new Integer(flavors[i].getParameter(MASK)).intValue();
                         list.add(new ViewItemPasteType(this.getFolder(), viewItemNode, type));
                     } catch (Exception e) {
@@ -928,30 +960,30 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         }
 
         @Override
-        public Action[] getActions( boolean context ) {
-            return new Action[] {
-                CommonProjectActions.newFileAction(),
-                SystemAction.get(AddExistingItemAction.class),
-                SystemAction.get(AddExistingFolderItemsAction.class),
-                SystemAction.get(NewFolderAction.class),
-                null,
-                new RefreshItemAction((LogicalViewChildren)getChildren(), folder, null),
-                null,
-                SystemAction.get(CutAction.class),
-                SystemAction.get(CopyAction.class),
-                SystemAction.get(PasteAction.class),
-                SystemAction.get(RemoveFolderAction.class),
-//                SystemAction.get(RenameAction.class),
-                createRenameAction(),
-                null,
-                SystemAction.get(org.openide.actions.FindAction.class ),
-                null,
-                SystemAction.get(PropertiesFolderAction.class),
-            };
+        public Action[] getActions(boolean context) {
+            return new Action[]{
+                        CommonProjectActions.newFileAction(),
+                        SystemAction.get(AddExistingItemAction.class),
+                        SystemAction.get(AddExistingFolderItemsAction.class),
+                        SystemAction.get(NewFolderAction.class),
+                        null,
+                        new RefreshItemAction((LogicalViewChildren) getChildren(), folder, null),
+                        null,
+                        SystemAction.get(CutAction.class),
+                        SystemAction.get(CopyAction.class),
+                        SystemAction.get(PasteAction.class),
+                        SystemAction.get(RemoveFolderAction.class),
+                        //                SystemAction.get(RenameAction.class),
+                        createRenameAction(),
+                        null,
+                        SystemAction.get(org.openide.actions.FindAction.class),
+                        null,
+                        SystemAction.get(PropertiesFolderAction.class),};
         }
     }
 
     private class ViewItemPasteType extends PasteType {
+
         private final Folder toFolder;
         private final ViewItemNode viewItemNode;
         private final int type;
@@ -1018,8 +1050,9 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
                         String newName = IpeUtils.createUniqueFileName(parent, fo.getName(), ext);
                         fo.copy(fo.getParent(), newName, ext);
                         String newPath = parent + "/" + newName; // NOI18N
-                        if (ext.length() > 0)
+                        if (ext.length() > 0) {
                             newPath = newPath + "." + ext; // NOI18N
+                        }
                         newPath = IpeUtils.toRelativePath(FileUtil.toFile(viewItemNode.getFolder().getProject().getProjectDirectory()).getPath(), newPath);
                         Item newItem = new Item(FilePathAdaptor.normalize(newPath));
                         toFolder.addItemAction(newItem);
@@ -1042,10 +1075,11 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
                         FileObject fo = item.getFileObject();
                         String ext = fo.getExt();
                         String newName = IpeUtils.createUniqueFileName(parent, fo.getName(), ext);
-                        FileObject copy = fo.copy(toProject.getProjectDirectory(), newName, ext);
+                        //FileObject copy = fo.copy(toProject.getProjectDirectory(), newName, ext);
                         String newPath = newName;
-                        if (ext.length() > 0)
+                        if (ext.length() > 0) {
                             newPath = newPath + "." + ext; // NOI18N
+                        }
                         toFolder.addItemAction(new Item(FilePathAdaptor.normalize(newPath))); // NOI18N
                     }
                 }
@@ -1055,10 +1089,11 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
     }
 
     private final class ExternalFilesNode extends AbstractNode {
+
         private Folder folder;
 
         public ExternalFilesNode(Folder folder) {
-            super( new ExternalFilesChildren(project, folder), Lookups.fixed(new Object[] {project, new FolderSearchInfo(folder)}));
+            super(new ExternalFilesChildren(project, folder), Lookups.fixed(new Object[]{project, new FolderSearchInfo(folder)}));
             setName(folder.getName());
             setDisplayName(folder.getDisplayName());
             setShortDescription(NbBundle.getBundle(getClass()).getString("ONLY_REFERENCE_TXT"));
@@ -1067,34 +1102,38 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
 
         @Override
         public Object getValue(String valstring) {
-            if (valstring == null)
-                return super.getValue(valstring);
+            if (valstring == null) {
+                return super.getValue(null);
+            }
             if (valstring.equals("Folder")) // NOI18N
+            {
                 return folder;
-            else if (valstring.equals("Project")) // NOI18N
+            } else if (valstring.equals("Project")) // NOI18N
+            {
                 return project;
-            else if (valstring.equals("This")) // NOI18N
+            } else if (valstring.equals("This")) // NOI18N
+            {
                 return this;
+            }
             return super.getValue(valstring);
         }
 
         @Override
-        public Image getIcon( int type ) {
+        public Image getIcon(int type) {
             return ImageUtilities.loadImage("org/netbeans/modules/cnd/makeproject/ui/resources/importantFolder.gif"); // NOI18N
         }
 
         @Override
-        public Image getOpenedIcon( int type ) {
+        public Image getOpenedIcon(int type) {
             return ImageUtilities.loadImage("org/netbeans/modules/cnd/makeproject/ui/resources/importantFolderOpened.gif"); // NOI18N
         }
 
         @Override
-        public Action[] getActions( boolean context ) {
-            return new Action[] {
-                new AddExternalItemAction(project),
-                null,
-                SystemAction.get(org.openide.actions.FindAction.class ),
-            };
+        public Action[] getActions(boolean context) {
+            return new Action[]{
+                        new AddExternalItemAction(project),
+                        null,
+                        SystemAction.get(org.openide.actions.FindAction.class),};
         }
 
         @Override
@@ -1102,10 +1141,11 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             return false;
         }
     }
-
     private static final int WAIT_DELAY = 50;
-    private abstract class BaseMakeViewChildren extends Children.Keys 
+
+    private abstract class BaseMakeViewChildren extends Children.Keys
             implements ChangeListener, RefreshableItemsContainer {
+
         private final Folder folder;
 
         public BaseMakeViewChildren(Folder folder) {
@@ -1118,26 +1158,28 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
                 //System.err.println("BaseMakeViewChildren: FindPathMode " + (SwingUtilities.isEventDispatchThread() ? "UI":"regular") + " thread");
                 // no wait node for direct search
                 super.addNotify();
-                folder.addChangeListener( this );
-                setKeys( getKeys() );
-            }  else {
+                folder.addChangeListener(this);
+                setKeys(getKeys());
+            } else {
                 //System.err.println("BaseMakeViewChildren: create wait node " + (SwingUtilities.isEventDispatchThread() ? "UI":"regular") + " thread");
                 if (SwingUtilities.isEventDispatchThread()) {
                     super.addNotify();
                     setKeys(new Object[]{getWaitNode()});
-                    folder.addChangeListener( this );
+                    folder.addChangeListener(this);
                     RequestProcessor.getDefault().post(new Runnable() {
+
                         public void run() {
                             // between posting this task and running it can be become deleted (see iz #142240)
                             // TODO: fix workflow instead?
-                            if (project.getProjectDirectory()!=null && project.getProjectDirectory().isValid()) {
-                            //System.err.println("ExternalFilesChildren: setting real nodes");
-                                setKeys( getKeys() );
+                            if (project.getProjectDirectory() != null && project.getProjectDirectory().isValid()) {
+                                //System.err.println("ExternalFilesChildren: setting real nodes");
+                                setKeys(getKeys());
                             }
                         }
                     }, WAIT_DELAY);
-                }  else {
+                } else {
                     SwingUtilities.invokeLater(new Runnable() {
+
                         public void run() {
                             addNotify();
                         }
@@ -1150,17 +1192,15 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             refreshKey(item);
         }
 
-
         @Override
         protected void removeNotify() {
             setKeys(Collections.EMPTY_SET);
-            folder.removeChangeListener( this );
+            folder.removeChangeListener(this);
             super.removeNotify();
         }
 
-
         public void stateChanged(ChangeEvent e) {
-            if (e.getSource() instanceof Item ) {
+            if (e.getSource() instanceof Item) {
                 // update single item (it may be broken)
                 Item[] items = getFolder().getItemsAsArray();
                 for (int i = 0; i < items.length; i++) {
@@ -1168,8 +1208,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
                         refreshItem(items[i]);
                     }
                 }
-            }
-            else {
+            } else {
                 // update folder. Items may have been added or deleted
                 setKeys(getKeys());
             }
@@ -1188,15 +1227,15 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             super(folder);
         }
 
-        protected Node[] createNodes( Object key ) {
+        protected Node[] createNodes(Object key) {
             if (key instanceof LoadingNode) {
-                return new Node[] { (Node)key };
+                return new Node[]{(Node) key};
             }
             if (!(key instanceof Item)) {
                 System.err.println("wrong item in external files folder " + key); // NOI18N
                 return null;
             }
-            Item item = (Item)key;
+            Item item = (Item) key;
             DataObject fileDO = item.getDataObject();
             Node node;
             if (fileDO != null) {
@@ -1204,7 +1243,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             } else {
                 node = new BrokenViewItemNode(this, getFolder(), item);
             }
-            return new Node[] {node};
+            return new Node[]{node};
         }
 
         protected Collection getKeys() {
@@ -1213,6 +1252,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
     }
 
     private class ViewItemNode extends FilterNode implements ChangeListener {
+
         RefreshableItemsContainer childrenKeys;
         private Folder folder;
         private Item item;
@@ -1233,6 +1273,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         public Item getItem() {
             return item;
         }
+
         @Override
         public boolean canRename() {
             return true;
@@ -1280,6 +1321,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         }
         // The node will be removed when the Item gets notification that the file has been destroyed.
         // No need to do it here.
+
         @Override
         public void destroy() throws IOException {
 //            File file = new File(item.getAbsPath());
@@ -1291,21 +1333,27 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
 
         @Override
         public Object getValue(String valstring) {
-            if (valstring == null)
-                return super.getValue(valstring);
+            if (valstring == null) {
+                return super.getValue(null);
+            }
             if (valstring.equals("Folder")) // NOI18N
+            {
                 return getFolder();
-            else if (valstring.equals("Project")) // NOI18N
+            } else if (valstring.equals("Project")) // NOI18N
+            {
                 return project;
-            else if (valstring.equals("Item")) // NOI18N
+            } else if (valstring.equals("Item")) // NOI18N
+            {
                 return getItem();
-            else if (valstring.equals("This")) // NOI18N
+            } else if (valstring.equals("This")) // NOI18N
+            {
                 return this;
+            }
             return super.getValue(valstring);
         }
 
         @Override
-        public Action[] getActions( boolean context ) {
+        public Action[] getActions(boolean context) {
             // Replace DeleteAction with Remove Action
             // Replace PropertyAction with customizeProjectAction
             Action[] oldActions = super.getActions(false);
@@ -1336,9 +1384,9 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         public Image getIcon(int type) {
             Image image = super.getIcon(type);
             if (isExcluded() && (image instanceof BufferedImage)) {
-                ColorSpace gray_space = ColorSpace.getInstance (ColorSpace.CS_GRAY);
-                ColorConvertOp convert_to_gray_op = new ColorConvertOp (gray_space, null);
-                image = convert_to_gray_op.filter ((BufferedImage)image, null);
+                ColorSpace gray_space = ColorSpace.getInstance(ColorSpace.CS_GRAY);
+                ColorConvertOp convert_to_gray_op = new ColorConvertOp(gray_space, null);
+                image = convert_to_gray_op.filter((BufferedImage) image, null);
             }
             return image;
         }
@@ -1346,16 +1394,16 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         @Override
         public String getHtmlDisplayName() {
             if (isExcluded()) {
-                return "<font color='!controlShadow'>"+getDisplayName(); // NOI18N
+                return "<font color='!controlShadow'>" + getDisplayName(); // NOI18N
             }
             return super.getHtmlDisplayName();
         }
 
-        private boolean isExcluded(){
-            if (item == null || item.getFolder() == null || item.getFolder().getConfigurationDescriptor() == null || item.getFolder().getConfigurationDescriptor().getConfs() == null){
+        private boolean isExcluded() {
+            if (item == null || item.getFolder() == null || item.getFolder().getConfigurationDescriptor() == null || item.getFolder().getConfigurationDescriptor().getConfs() == null) {
                 return false;
             }
-            MakeConfiguration makeConfiguration = (MakeConfiguration)item.getFolder().getConfigurationDescriptor().getConfs().getActive();
+            MakeConfiguration makeConfiguration = (MakeConfiguration) item.getFolder().getConfigurationDescriptor().getConfs().getActive();
             ItemConfiguration itemConfiguration = item.getItemConfiguration(makeConfiguration); //ItemConfiguration)makeConfiguration.getAuxObject(ItemConfiguration.getId(item.getPath()));
             if (itemConfiguration == null) {
                 return false;
@@ -1368,18 +1416,19 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             String displayName = getDisplayName();
             // do not work:
             //fireDisplayNameChange(displayName,displayName);
-            fireDisplayNameChange(displayName,"");
-            fireDisplayNameChange("",displayName);
+            fireDisplayNameChange(displayName, "");
+            fireDisplayNameChange("", displayName);
             fireIconChange();
             fireOpenedIconChange();
         }
     }
-    
+
     private static class ViewItemTransferable extends ExTransferable.Single {
+
         private ViewItemNode node;
 
         public ViewItemTransferable(ViewItemNode node, int operation) throws ClassNotFoundException {
-            super(new DataFlavor(ITEM_VIEW_FLAVOR.format(new Object[] {new Integer(operation)}), null, MakeLogicalViewProvider.class.getClassLoader()));
+            super(new DataFlavor(ITEM_VIEW_FLAVOR.format(new Object[]{Integer.valueOf(operation)}), null, MakeLogicalViewProvider.class.getClassLoader()));
             this.node = node;
         }
 
@@ -1389,6 +1438,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
     }
 
     private final class BrokenViewItemNode extends AbstractNode {
+
         private boolean broken;
         private RefreshableItemsContainer childrenKeys;
         private Folder folder;
@@ -1407,30 +1457,30 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
         }
 
         @Override
-        public Image getIcon( int type ) {
+        public Image getIcon(int type) {
             //Image original = Utilities.loadImage("org/openide/loaders/instanceObject.gif"); // NOI18N
             //Image original = Utilities.loadImage("org/netbeans/modules/cnd/loaders/CCSrcIcon.gif"); // NOI18N
             Image original;
             int tool = item.getDefaultTool();
-            if (tool == Tool.CCompiler)
+            if (tool == Tool.CCompiler) {
                 original = ImageUtilities.loadImage("org/netbeans/modules/cnd/loaders/CSrcIcon.gif"); // NOI18N
-            else if (tool == Tool.CCCompiler)
+            } else if (tool == Tool.CCCompiler) {
                 original = ImageUtilities.loadImage("org/netbeans/modules/cnd/loaders/CCSrcIcon.gif"); // NOI18N
-            else if (tool == Tool.FortranCompiler)
+            } else if (tool == Tool.FortranCompiler) {
                 original = ImageUtilities.loadImage("org/netbeans/modules/cnd/loaders/FortranSrcIcon.gif"); // NOI18N
-            else
+            } else {
                 original = ImageUtilities.loadImage("org/netbeans/modules/cnd/loaders/unknown.gif"); // NOI18N
+            }
             return broken ? ImageUtilities.mergeImages(original, brokenProjectBadge, 11, 0) : original;
         }
 
         @Override
-        public Action[] getActions( boolean context ) {
-            return new Action[] {
-                SystemAction.get(RemoveItemAction.class),
-                new RefreshItemAction(childrenKeys, null, item),
-                null,
-                SystemAction.get(PropertiesItemAction.class),
-            };
+        public Action[] getActions(boolean context) {
+            return new Action[]{
+                        SystemAction.get(RemoveItemAction.class),
+                        new RefreshItemAction(childrenKeys, null, item),
+                        null,
+                        SystemAction.get(PropertiesItemAction.class),};
         }
 
         public void refresh() {
@@ -1444,25 +1494,33 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
 
         @Override
         public Object getValue(String valstring) {
-            if (valstring == null)
-                return super.getValue(valstring);
+            if (valstring == null) {
+                return super.getValue(null);
+            }
             if (valstring.equals("Folder")) // NOI18N
+            {
                 return folder;
-            else if (valstring.equals("Project")) // NOI18N
+            } else if (valstring.equals("Project")) // NOI18N
+            {
                 return project;
-            else if (valstring.equals("Item")) // NOI18N
+            } else if (valstring.equals("Item")) // NOI18N
+            {
                 return item;
-            else if (valstring.equals("This")) // NOI18N
+            } else if (valstring.equals("This")) // NOI18N
+            {
                 return this;
+            }
             return super.getValue(valstring);
         }
     }
 
     private interface RefreshableItemsContainer {
+
         void refreshItem(Item item);
     }
 
     private static class RefreshItemAction extends AbstractAction {
+
         private RefreshableItemsContainer childrenKeys;
         private Folder folder;
         private Item item;
@@ -1487,6 +1545,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
     }
 
     private static class FolderSearchInfo implements SearchInfo {
+
         Folder folder;
 
         FolderSearchInfo(Folder folder) {
@@ -1505,8 +1564,9 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
     // this class should be static, because successors are shared classes
     // and accessing MakeLogicalViewProvider.this would use wrong one!
     private static class StandardNodeAction extends NodeAction {
+
         SystemAction systemAction;
-        
+
         public StandardNodeAction(SystemAction systemAction) {
             this.systemAction = systemAction;
         }
@@ -1525,7 +1585,7 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
                 }
 
                 if (folder != null) {
-                    MakeConfigurationDescriptor mcd = (MakeConfigurationDescriptor)folder.getConfigurationDescriptor();
+                    MakeConfigurationDescriptor mcd = (MakeConfigurationDescriptor) folder.getConfigurationDescriptor();
                     if (mcd != null && !mcd.okToChange()) {
                         return;
                     }
@@ -1538,16 +1598,15 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             Lookup actionContext = new AbstractLookup(ic);
             final Action a;
             if (systemAction instanceof NodeAction) {
-                a = ((NodeAction)systemAction).createContextAwareInstance(actionContext);
-            }
-            else if (systemAction instanceof CallbackSystemAction) {
-                a = ((CallbackSystemAction)systemAction).createContextAwareInstance(actionContext);
-            }
-            else {
+                a = ((NodeAction) systemAction).createContextAwareInstance(actionContext);
+            } else if (systemAction instanceof CallbackSystemAction) {
+                a = ((CallbackSystemAction) systemAction).createContextAwareInstance(actionContext);
+            } else {
                 a = null;
                 assert false;
             }
             SwingUtilities.invokeLater(new Runnable() {
+
                 public void run() {
                     a.actionPerformed(new ActionEvent(this, 0, null));
                 }
@@ -1569,26 +1628,28 @@ public class MakeLogicalViewProvider implements LogicalViewProvider {
             return systemAction.getName();
         }
     }
-    
+
     private static class RenameNodeAction extends StandardNodeAction {
+
         public RenameNodeAction() {
             super(SystemAction.get(RenameAction.class));
         }
     }
-    
+
     private static class DeleteNodeAction extends StandardNodeAction {
+
         public DeleteNodeAction() {
             super(SystemAction.get(DeleteAction.class));
         }
     }
-    
+
     private StandardNodeAction createRenameAction() {
         if (renameAction == null) {
             renameAction = new RenameNodeAction();
         }
         return renameAction;
     }
-    
+
     private StandardNodeAction createDeleteAction() {
         if (deleteAction == null) {
             deleteAction = new DeleteNodeAction();
